--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@ android:gravity="center">
         android:gravity="center">
 
         <Button
+            android:theme="@style/Theme.PageWiseButton"
             android:id="@+id/teacher_loginbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,6 +39,7 @@ android:gravity="center">
             style="Widget.AppCompat.Button" />
 
         <Button
+            android:theme="@style/Theme.PageWiseButton"
             android:id="@+id/student_loginbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
