--- a/app/src/main/res/layout/activity_teacherview.xml
+++ b/app/src/main/res/layout/activity_teacherview.xml
@@ -7,14 +7,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".TeacherViewActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:name="com.pagewisegroup.pagewise.EnterAssignment"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/pagewise_logosmall"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:src="@drawable/pagewise_logosmall"
+            android:contentDescription="@string/logo_alt" />
+
+        <TextView
+            android:id="@+id/student_name_display"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/student_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:padding="0dp"
+            android:src="@drawable/user_icon"
+            app:layout_constraintRight_toRightOf="parent"
+            android:contentDescription="@string/user_icon" />
+
+    </androidx.appcompat.widget.Toolbar>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--<androidx.fragment.app.FragmentContainerView-->
+<!--android:id="@+id/fragmentContainerView"-->
+<!--android:name="com.pagewisegroup.pagewise.EnterAssignment"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--app:layout_constraintBottom_toBottomOf="parent"-->
+<!--app:layout_constraintEnd_toEndOf="parent"-->
+<!--app:layout_constraintStart_toStartOf="parent"-->
+<!--app:layout_constraintTop_toTopOf="parent" />-->
