--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PageWise" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PageWise" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <item name="colorPrimary">#33363d</item>
@@ -20,11 +20,12 @@
         <item name="colorError">#B00020</item>
         <item name="colorOnError">#FFFFFF</item>
 
-        <item name="colorButtonNormal">#FFFFFF</item>
-
-        <item name="colorAccent">#FFFFFF</item>
-
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="Theme.PageWiseButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorSecondaryVariant">#FFFFFF</item>
+        <item name="android:textColor">#33363d</item>
     </style>
 </resources>
