--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentViewActivity">
+    tools:context=".ReadingActivity">
 
     <Button
-        android:id="@+id/atest_button"
-        android:layout_width="257dp"
-        android:layout_height="101dp"
-        android:layout_marginTop="252dp"
-        android:text="test assignment tracking"
+        android:id="@+id/start_end_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="356dp"
+        android:text="Start/Stop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
