added quick test

--- a/app/src/main/res/layout/activity_studentview.xml
+++ b/app/src/main/res/layout/activity_studentview.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,4 +14,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/string_test_button"
+        android:layout_width="257dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="200dp"
+        android:text="test assignment entering via string"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/atest_button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
