--- a/app/src/main/res/layout/fragment_class_view.xml
+++ b/app/src/main/res/layout/fragment_class_view.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ClassViewFragment">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@drawable/list_bubble"
+    android:layout_margin="8sp">
 
     <TextView
+        android:id="@+id/class_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="class view" />
-</androidx.core.widget.NestedScrollView>
+        android:layout_marginTop="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin"
+        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginBottom="10dp"
+        android:textSize="22sp"
+        android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+        android:id="@+id/class_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/text_margin"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem"/>
+</LinearLayout>
