Added the ability to create new profiles, automatically puts them in database and list updates accordingly. TODO: make profiles clickable.

--- a/app/src/main/res/layout/fragment_profile_view_list.xml
+++ b/app/src/main/res/layout/fragment_profile_view_list.xml
@@ -8,5 +8,5 @@
     android:layout_height="match_parent"
     android:layout_margin="50dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ProfileViewFragment"
+    tools:context=".profile.ProfileViewFragment"
     tools:listitem="@layout/fragment_profile_view" />
