--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.PageWise.Dialog" parent="Theme.MaterialComponents.Dialog">
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:windowNoTitle">false</item>
+    </style>
+
     <style name="Theme.PageWise.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.PageWise.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
