--- a/app/src/main/res/layout/fragment_enter_assignment.xml
+++ b/app/src/main/res/layout/fragment_enter_assignment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EnterAssignment">
+    tools:context=".EnterAssignmentFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -51,7 +51,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Class"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:inputType="textNoSuggestions"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.pagewisegroup.pagewise.DateDisplayView
