--- a/app/src/main/res/layout/activity_studentview.xml
+++ b/app/src/main/res/layout/activity_studentview.xml
@@ -39,8 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:layout_marginEnd="10dp"
-                android:text="Name Placeholder">
+                android:layout_marginEnd="10dp">
             </TextView>
 
             <Spinner
