--- a/app/src/main/res/layout/fragment_class_view.xml
+++ b/app/src/main/res/layout/fragment_class_view.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="@dimen/text_margin"
         android:layout_marginStart="@dimen/text_margin"
         android:layout_marginEnd="@dimen/text_margin"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:textSize="22sp"
         android:textAppearance="?attr/textAppearanceListItem"/>
 
@@ -26,13 +26,22 @@
         android:layout_marginEnd="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"/-->
 
+    <TextView
+        android:id="@+id/progress_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin"
+        android:layout_marginEnd="@dimen/text_margin"
+        android:textSize="11sp"
+        android:textAppearance="?attr/textAppearanceListItem"/>
+
     <ProgressBar
         android:id="@+id/weekly_progress"
         style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:progress="0"
-        android:padding="10dp"
+        android:paddingHorizontal="10dp"
         android:progressTint="#DDFF"
         android:min="0"
         android:max="100" />
