--- a/app/src/main/res/layout/fragment_assignment_view.xml
+++ b/app/src/main/res/layout/fragment_assignment_view.xml
@@ -9,18 +9,27 @@
         style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="6dp"
+        android:layout_margin="4dp"
         android:progressTint="#DDFF"
         android:min="0"
         android:max="100"
-        android:minWidth="75dp" />
+        android:minWidth="50dp" />
 
     <TextView
         android:id="@+id/progress_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="6dp"
+        android:layout_margin="2dp"
+        android:textAppearance="?attr/textAppearanceListItem" />
+
+    <TextView
+        android:id="@+id/timeLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="2dp"
+        android:text="Xhr XXmins"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
@@ -28,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="6dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="2dp"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
@@ -36,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="6dp"
+        android:layout_margin="2dp"
         android:textAppearance="?attr/textAppearanceListItem" />
 
 </LinearLayout>
