--- a/app/src/main/res/layout/fragment_class_view.xml
+++ b/app/src/main/res/layout/fragment_class_view.xml
@@ -17,20 +17,21 @@
         android:textSize="22sp"
         android:textAppearance="?attr/textAppearanceListItem"/>
 
-    <!--TextView
+    <TextView
         android:id="@+id/class_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/text_margin"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="25dp"
         android:layout_marginEnd="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"/-->
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textSize="10sp"
+        android:text="XXh XXm"/>
 
     <TextView
         android:id="@+id/progress_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_margin"
         android:layout_marginStart="@dimen/text_margin"
         android:layout_marginEnd="@dimen/text_margin"
         android:textSize="11sp"
