slight ui updates for clarity

--- a/app/src/main/res/layout/fragment_record_reading_picker.xml
+++ b/app/src/main/res/layout/fragment_record_reading_picker.xml
@@ -51,6 +51,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Past Reading"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/timeYourselfButton"
@@ -60,7 +62,9 @@
         android:id="@+id/timeYourselfButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Start Now"
+        android:text="Record Reading"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pastReadingButton"
         app:layout_constraintStart_toStartOf="parent"
