--- a/app/src/main/res/layout/fragment_assignment_view_list.xml
+++ b/app/src/main/res/layout/fragment_assignment_view_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".AssignmentViewFragment"
+    tools:context=".assignmentView.AssignmentViewFragment"
     tools:listitem="@layout/fragment_assignment_view" />
