--- a/app/src/main/res/layout/fragment_enter_class.xml
+++ b/app/src/main/res/layout/fragment_enter_class.xml
@@ -21,7 +21,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:textColor="@color/white" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
